istio-ingress-resources.yaml
################################################################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
  annotations:
    # Ingress annotations other than ingress class will not be honored
    kubernetes.io/ingress.class: istio
spec:
  # ingressClassName: istio
  rules:
  - host: kiali.192.168.59.10.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiali
            port:
              number: 20001
...
################################################################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: istio-system
  annotations:
    # Ingress annotations other than ingress class will not be honored
    kubernetes.io/ingress.class: istio
spec:
  # ingressClassName: istio
  rules:
  - host: prometheus.192.168.59.10.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
...
################################################################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: istio-system
  annotations:
    # Ingress annotations other than ingress class will not be honored
    kubernetes.io/ingress.class: istio
spec:
  # ingressClassName: istio
  rules:
  - host: grafana.192.168.59.10.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
...
